<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/judul"
        android:layout_width="231dp"
        android:layout_height="111dp"
        android:layout_marginTop="16dp"
        android:text="@string/masukkan_dua_angka"
        android:textAlignment="gravity"
        android:textSize="16pt"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.611"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/angka_pertama_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/judul"
        android:autofillHints="@string/angka_pertama"
        android:hint="@string/angka_pertama"/>

    <EditText
        android:id="@+id/ak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/angka_kedua_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ap"
        android:autofillHints="@string/angka_kedua"
        android:hint="@string/angka_kedua"/>

    <Button
        android:id="@+id/tambah"
        android:layout_width="62dp"
        android:layout_height="49dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:text="@string/tambahin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ak" />

    <Button
        android:id="@+id/kurang"
        android:layout_width="62dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:text="@string/kurangin"
        app:layout_constraintStart_toEndOf="@+id/tambah"
        app:layout_constraintTop_toBottomOf="@+id/ak" />

    <Button
        android:id="@+id/bagi"
        android:layout_width="62dp"
        android:layout_height="49dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:text="@string/bagiin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ak" />

    <Button
        android:id="@+id/kali"
        android:layout_width="62dp"
        android:layout_height="49dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:text="@string/kaliin"
        app:layout_constraintEnd_toStartOf="@+id/bagi"
        app:layout_constraintTop_toBottomOf="@+id/ak" />

    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="20dp"
        android:text="@string/clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/judul" />

    <TextView
        android:id="@+id/hasil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="284dp"
        android:text="@string/hasil"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/judul" />

    <TextView
        android:id="@+id/angka_hasil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/angkahasil"
        android:textSize="96sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hasil" />

</androidx.constraintlayout.widget.ConstraintLayout>